--- a/css/styles.css
+++ b/css/styles.css
@@ -1,32 +1,77 @@
-/*label{
+label{
   font-size: 1.4em;
 }
 h2 {
 text-align: center;
 }
-#translated-output {
-display: none;
+
+h1 {
+  color: #000;
 }
-#translated-output h4 {
-display: block;
+#container {
 width: 100%;
-height: 34px;
-padding: 6px 12px;
+}
+#top {
+  /*background-image: url("../img/img2.jpg");*/
+    /*background: linear-gradient(#618CBA, #3E6894, #222);*/
+    background-size: 100%;
+    background-color: #B3CF6B;
+    color:#000;
+    margin:10px 0px 0px 0px;
+    padding: 20px 15px;
+    background-size: 100%;
+    border-radius: 5px;
+    margin-bottom: 10px;
+  }
+#main {
+padding: 20px 15px;
 font-size: 14px;
-line-height: 1.42857143;
-color: #555;
 background-color: #fff;
-background-image: none;
-border: 1px solid #ccc;
-border-radius: 4px;
+border-radius: 5px;
+margin-bottom: 10px;
+}
+#result {
+  padding: 20px 15px;
+  font-size: 1em;
+  background-color: #fff;
+  border-radius: 5px;
+}
+li {
+  list-style: none;
 }
 
 body{
   background-color: #222;
 }
 
+input {
+  margin-top: 10px;
+}
+
 .btn {
-  background-color: teal;
-  margin-top: 50px;
+  background-color: #4C9BD4;
+  margin-top: 10px;
   color: #fff;
-}*/
+}
+.btn:hover {
+  background-color: #6fafdc;
+  margin-top: 10px;
+  color: #fff;
+}
+.btn:active {
+  background-color: #888;
+  margin-top: 10px;
+  color: #fff;
+}
+
+.btn:visited {
+  background-color: #888;
+  margin-top: 10px;
+  color: #fff;
+}
+
+a:visited {
+  background-color: #888;
+  margin-top: 10px;
+  color: #fff;
+}
